crates/flui-objects/tests/snapshots/harness_snapshot__opacity_layer.snap
---
source: crates/flui-objects/tests/harness_snapshot.rs
expression: run.snapshot()
---
Offset
  dx: 0.00
  dy: 0.00
  Opacity
    alpha: 0.50
    dx: 0.00
    dy: 0.00
    needs_compositing
    Picture
      bounds: (0.00,0.00,50.00,50.00)
      commands: 1
      DrawRect
        rect: (0.00,0.00,50.00,50.00)
        color: #FF0000FF
        style: Fill
