crates/flui-objects/tests/snapshots/harness_snapshot__smoke.snap
---
source: crates/flui-objects/tests/harness_snapshot.rs
assertion_line: 6
expression: "\"line one\\nline two\""
---
line one
line two
